package main

import (
	"flag"
	"fmt"

	"github.com/zeromicro/go-zero/core/conf"
	"github.com/zeromicro/go-zero/zrpc"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	"gozero-ddd/internal/interfaces/rpc/pb"
	"gozero-ddd/internal/interfaces/rpc/server"
	"gozero-ddd/internal/interfaces/rpc/svc"
)

var configFile = flag.String("f", "etc/knowledge-rpc.yaml", "é…ç½®æ–‡ä»¶è·¯å¾„")

func main() {
	flag.Parse()

	// 1. åŠ è½½é…ç½®
	var c svc.RpcConfig
	conf.MustLoad(*configFile, &c)

	// 2. åˆ›å»ºæœåŠ¡ä¸Šä¸‹æ–‡ï¼ˆä¾èµ–æ³¨å…¥å®¹å™¨ï¼‰
	// ServiceContext åˆå§‹åŒ–æ‰€æœ‰ä¾èµ–ï¼šæ•°æ®åº“è¿æ¥ã€ä»“å‚¨ã€é¢†åŸŸæœåŠ¡ã€å¤„ç†å™¨ç­‰
	ctx := svc.NewServiceContext(c)

	// 3. åˆ›å»º gRPC æœåŠ¡å™¨
	// go-zero çš„ zrpc.MustNewServer å°è£…äº† gRPC æœåŠ¡å™¨çš„åˆ›å»º
	// è‡ªåŠ¨æ·»åŠ äº†æ‹¦æˆªå™¨ã€ä¸­é—´ä»¶ç­‰
	s := zrpc.MustNewServer(c.RpcServerConf, func(grpcServer *grpc.Server) {
		// 4. æ³¨å†Œ gRPC æœåŠ¡
		// KnowledgeServer å®ç°äº† pb.KnowledgeServiceServer æ¥å£
		pb.RegisterKnowledgeServiceServer(grpcServer, server.NewKnowledgeServer(ctx))

		// 5. æ³¨å†Œåå°„æœåŠ¡ï¼ˆå¼€å‘è°ƒè¯•ç”¨ï¼‰
		// å…è®¸ä½¿ç”¨ grpcurl ç­‰å·¥å…·æŸ¥è¯¢æœåŠ¡æ–¹æ³•
		if c.Mode == "dev" {
			reflection.Register(grpcServer)
		}
	})
	defer s.Stop()

	// æ‰“å°å¯åŠ¨ä¿¡æ¯
	fmt.Printf("ğŸš€ çŸ¥è¯†åº“ç®¡ç†ç³»ç»Ÿ gRPC æœåŠ¡å¯åŠ¨æˆåŠŸ\n")
	fmt.Printf("ğŸ“ æœåŠ¡åœ°å€: %s\n", c.ListenOn)
	fmt.Printf("ğŸ“š gRPC æ¥å£:\n")
	fmt.Printf("   GetKnowledgeBase    - è·å–çŸ¥è¯†åº“è¯¦æƒ…ï¼ˆQuery æ¼”ç¤ºï¼‰\n")
	fmt.Printf("   CreateKnowledgeBase - åˆ›å»ºçŸ¥è¯†åº“ï¼ˆCommand æ¼”ç¤ºï¼‰\n")
	fmt.Printf("\n")
	fmt.Printf("ğŸ’¡ æµ‹è¯•å‘½ä»¤:\n")
	fmt.Printf("   # ä½¿ç”¨ grpcurl æµ‹è¯•ï¼ˆéœ€è¦å…ˆå®‰è£… grpcurlï¼‰\n")
	fmt.Printf("   grpcurl -plaintext -d '{\"name\":\"æµ‹è¯•çŸ¥è¯†åº“\",\"description\":\"è¿™æ˜¯ä¸€ä¸ªæµ‹è¯•\"}' localhost:9999 knowledge.KnowledgeService/CreateKnowledgeBase\n")
	fmt.Printf("   grpcurl -plaintext -d '{\"id\":\"<knowledge_base_id>\"}' localhost:9999 knowledge.KnowledgeService/GetKnowledgeBase\n")
	fmt.Printf("\n")

	// 6. å¯åŠ¨æœåŠ¡å™¨
	s.Start()
}
