// gRPC å®¢æˆ·ç«¯ç¤ºä¾‹
// æ¼”ç¤ºå¦‚ä½•è°ƒç”¨ KnowledgeService çš„ gRPC æ¥å£
package main

import (
	"context"
	"fmt"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	"gozero-ddd/internal/interfaces/rpc/pb"
)

func main() {
	// 1. åˆ›å»º gRPC è¿æ¥
	conn, err := grpc.Dial(
		"localhost:9999",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		log.Fatalf("âŒ è¿æ¥ gRPC æœåŠ¡å¤±è´¥: %v", err)
	}
	defer conn.Close()

	// 2. åˆ›å»ºå®¢æˆ·ç«¯
	client := pb.NewKnowledgeServiceClient(conn)

	// 3. è®¾ç½®è¶…æ—¶ä¸Šä¸‹æ–‡
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// ==================== æ¼”ç¤ºï¼šåˆ›å»ºçŸ¥è¯†åº“ ====================
	fmt.Println("ğŸ“ æ¼”ç¤º CreateKnowledgeBase æ¥å£ï¼ˆCommand æ“ä½œï¼‰")
	fmt.Println("================================================")

	createResp, err := client.CreateKnowledgeBase(ctx, &pb.CreateKnowledgeBaseRequest{
		Name:        "gRPC æµ‹è¯•çŸ¥è¯†åº“",
		Description: "è¿™æ˜¯é€šè¿‡ gRPC æ¥å£åˆ›å»ºçš„çŸ¥è¯†åº“ï¼Œæ¼”ç¤º Command æ“ä½œ",
	})
	if err != nil {
		log.Fatalf("âŒ åˆ›å»ºçŸ¥è¯†åº“å¤±è´¥: %v", err)
	}

	kb := createResp.KnowledgeBase
	fmt.Printf("âœ… åˆ›å»ºæˆåŠŸ!\n")
	fmt.Printf("   ID: %s\n", kb.Id)
	fmt.Printf("   åç§°: %s\n", kb.Name)
	fmt.Printf("   æè¿°: %s\n", kb.Description)
	fmt.Printf("   åˆ›å»ºæ—¶é—´: %s\n", time.Unix(kb.CreatedAt, 0).Format("2006-01-02 15:04:05"))
	fmt.Println()

	// ==================== æ¼”ç¤ºï¼šè·å–çŸ¥è¯†åº“ ====================
	fmt.Println("ğŸ” æ¼”ç¤º GetKnowledgeBase æ¥å£ï¼ˆQuery æ“ä½œï¼‰")
	fmt.Println("================================================")

	getResp, err := client.GetKnowledgeBase(ctx, &pb.GetKnowledgeBaseRequest{
		Id:               kb.Id,
		IncludeDocuments: true,
	})
	if err != nil {
		log.Fatalf("âŒ è·å–çŸ¥è¯†åº“å¤±è´¥: %v", err)
	}

	kbDetail := getResp.KnowledgeBase
	fmt.Printf("âœ… æŸ¥è¯¢æˆåŠŸ!\n")
	fmt.Printf("   ID: %s\n", kbDetail.Id)
	fmt.Printf("   åç§°: %s\n", kbDetail.Name)
	fmt.Printf("   æè¿°: %s\n", kbDetail.Description)
	fmt.Printf("   æ–‡æ¡£æ•°é‡: %d\n", kbDetail.DocumentCount)
	fmt.Printf("   æ›´æ–°æ—¶é—´: %s\n", time.Unix(kbDetail.UpdatedAt, 0).Format("2006-01-02 15:04:05"))
	fmt.Println()

	// ==================== DDD æ¶æ„è¯´æ˜ ====================
	fmt.Println("ğŸ“š DDD + go-zero gRPC æ¶æ„è¯´æ˜")
	fmt.Println("================================================")
	fmt.Println(`
è¯·æ±‚å¤„ç†æµç¨‹ï¼š
  gRPC Request 
    â†’ Server (å®ç° gRPC æ¥å£) 
    â†’ Logic (ä¸šåŠ¡é€»è¾‘åè°ƒ) 
    â†’ Command/Query Handler (åº”ç”¨å±‚) 
    â†’ Domain Service (é¢†åŸŸæœåŠ¡) 
    â†’ Repository (ä»“å‚¨) 
    â†’ Database

åˆ†å±‚èŒè´£ï¼š
  1. interfaces/rpc/pb       - Protocol Buffer å®šä¹‰å’Œç”Ÿæˆä»£ç 
  2. interfaces/rpc/server   - gRPC æœåŠ¡å®ç°ï¼Œåˆ›å»º Logic å®ä¾‹
  3. interfaces/rpc/logic    - ä¸šåŠ¡é€»è¾‘åè°ƒï¼Œè°ƒç”¨åº”ç”¨å±‚
  4. application/command     - å‘½ä»¤å¤„ç†å™¨ï¼ˆå†™æ“ä½œï¼‰
  5. application/query       - æŸ¥è¯¢å¤„ç†å™¨ï¼ˆè¯»æ“ä½œï¼‰
  6. domain/service          - é¢†åŸŸæœåŠ¡ï¼ˆæ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼‰
  7. domain/entity           - é¢†åŸŸå®ä½“ï¼ˆä¸šåŠ¡æ¨¡å‹ï¼‰
  8. infrastructure/persist  - ä»“å‚¨å®ç°ï¼ˆæ•°æ®æŒä¹…åŒ–ï¼‰
`)

	fmt.Println("ğŸ‰ gRPC æ¥å£æ¼”ç¤ºå®Œæˆ!")
}

