package logic

import (
	"context"

	"github.com/zeromicro/go-zero/core/logx"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"gozero-ddd/internal/application/command"
	"gozero-ddd/internal/interfaces/rpc/pb"
	"gozero-ddd/internal/interfaces/rpc/svc"
)

// CreateKnowledgeBaseLogic åˆ›å»ºçŸ¥è¯†åº“é€»è¾‘
// æ¼”ç¤ºï¼šåœ¨ gRPC æœåŠ¡ä¸­ä½¿ç”¨ DDD çš„ Command Handler
type CreateKnowledgeBaseLogic struct {
	ctx    context.Context
	svcCtx *svc.ServiceContext
	logx.Logger
}

// NewCreateKnowledgeBaseLogic åˆ›å»ºé€»è¾‘å®ä¾‹
func NewCreateKnowledgeBaseLogic(ctx context.Context, svcCtx *svc.ServiceContext) *CreateKnowledgeBaseLogic {
	return &CreateKnowledgeBaseLogic{
		ctx:    ctx,
		svcCtx: svcCtx,
		Logger: logx.WithContext(ctx),
	}
}

// CreateKnowledgeBase åˆ›å»ºçŸ¥è¯†åº“
// æ¼”ç¤ºï¼šå¦‚ä½•åœ¨ gRPC æœåŠ¡ä¸­ä½¿ç”¨ DDD çš„ Command Handler
// æµç¨‹ï¼šgRPC Request -> Logic -> Command Handler -> Domain Service -> Repository -> Domain Entity
//
// DDD åˆ†å±‚èŒè´£è¯´æ˜ï¼š
// 1. æ¥å£å±‚ï¼ˆæœ¬æ–‡ä»¶ï¼‰ï¼šæ¥æ”¶è¯·æ±‚ï¼Œå‚æ•°éªŒè¯ï¼Œè°ƒç”¨åº”ç”¨å±‚ï¼Œè½¬æ¢å“åº”
// 2. åº”ç”¨å±‚ï¼ˆCommand Handlerï¼‰ï¼šç¼–æ’ä¸šåŠ¡ç”¨ä¾‹ï¼Œä¸åŒ…å«ä¸šåŠ¡é€»è¾‘
// 3. é¢†åŸŸå±‚ï¼ˆDomain Serviceï¼‰ï¼šæ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼Œå¦‚"åç§°ä¸èƒ½é‡å¤"
// 4. åŸºç¡€è®¾æ–½å±‚ï¼ˆRepositoryï¼‰ï¼šæ•°æ®æŒä¹…åŒ–
func (l *CreateKnowledgeBaseLogic) CreateKnowledgeBase(req *pb.CreateKnowledgeBaseRequest) (*pb.CreateKnowledgeBaseResponse, error) {
	l.Logger.Infof("ğŸ“¥ [gRPC] CreateKnowledgeBase è¯·æ±‚: name=%s", req.Name)

	// 1. æ¥å£å±‚éªŒè¯ - åŸºæœ¬çš„æ ¼å¼éªŒè¯
	// æ³¨æ„ï¼šä¸šåŠ¡è§„åˆ™éªŒè¯ï¼ˆå¦‚åç§°å”¯ä¸€æ€§ï¼‰åœ¨é¢†åŸŸå±‚è¿›è¡Œ
	if req.Name == "" {
		l.Logger.Error("âŒ çŸ¥è¯†åº“åç§°ä¸èƒ½ä¸ºç©º")
		return nil, status.Error(codes.InvalidArgument, "çŸ¥è¯†åº“åç§°ä¸èƒ½ä¸ºç©º")
	}

	// 2. æ„å»ºå‘½ä»¤å¯¹è±¡ï¼ˆCQRS æ¨¡å¼ä¸­çš„ Commandï¼‰
	// Command æ˜¯ä¸€ä¸ªå€¼å¯¹è±¡ï¼Œä»£è¡¨ä¸€ä¸ªå†™æ“ä½œçš„æ„å›¾
	cmd := &command.CreateKnowledgeBaseCommand{
		Name:        req.Name,
		Description: req.Description,
	}

	// 3. è°ƒç”¨åº”ç”¨å±‚çš„ Command Handler
	// Command Handler èŒè´£ï¼š
	// - è°ƒç”¨é¢†åŸŸæœåŠ¡æ‰§è¡Œä¸šåŠ¡é€»è¾‘
	// - é¢†åŸŸæœåŠ¡ä¼šéªŒè¯ä¸šåŠ¡è§„åˆ™ï¼ˆå¦‚åç§°å”¯ä¸€æ€§ï¼‰
	// - é€šè¿‡ä»“å‚¨æŒä¹…åŒ–é¢†åŸŸå®ä½“
	// - è¿”å› DTOï¼ˆè€Œéé¢†åŸŸå®ä½“ï¼Œä¿æŠ¤é¢†åŸŸå±‚å°è£…ï¼‰
	result, err := l.svcCtx.CreateKnowledgeBaseHandler.Handle(l.ctx, cmd)
	if err != nil {
		l.Logger.Errorf("âŒ åˆ›å»ºçŸ¥è¯†åº“å¤±è´¥: %v", err)
		// æ ¹æ®é”™è¯¯ç±»å‹è¿”å›é€‚å½“çš„ gRPC çŠ¶æ€ç 
		return nil, status.Error(codes.Internal, err.Error())
	}

	// 4. å°† DTO è½¬æ¢ä¸º gRPC å“åº”
	resp := &pb.CreateKnowledgeBaseResponse{
		KnowledgeBase: &pb.KnowledgeBase{
			Id:            result.ID,
			Name:          result.Name,
			Description:   result.Description,
			DocumentCount: int32(result.DocumentCount),
			CreatedAt:     result.CreatedAt.Unix(),
			UpdatedAt:     result.UpdatedAt.Unix(),
		},
	}

	l.Logger.Infof("âœ… [gRPC] CreateKnowledgeBase æˆåŠŸ: id=%s, name=%s", result.ID, result.Name)
	return resp, nil
}

