package logic

import (
	"context"

	"github.com/zeromicro/go-zero/core/logx"

	"gozero-ddd/internal/application/dto"
	"gozero-ddd/internal/application/query"
	"gozero-ddd/internal/interfaces"
	"gozero-ddd/internal/interfaces/rpc/pb"
	"gozero-ddd/internal/interfaces/rpc/svc"
)

// GetKnowledgeBaseLogic èŽ·å–çŸ¥è¯†åº“é€»è¾‘
// åœ¨ go-zero ä¸­ï¼Œæ¯ä¸ª RPC æ–¹æ³•å¯¹åº”ä¸€ä¸ª Logic ç»“æž„
// Logic è´Ÿè´£åè°ƒåº”ç”¨å±‚ï¼ˆCommand/Query Handlerï¼‰å®Œæˆä¸šåŠ¡é€»è¾‘
type GetKnowledgeBaseLogic struct {
	ctx    context.Context
	svcCtx *svc.ServiceContext
	logx.Logger
}

// NewGetKnowledgeBaseLogic åˆ›å»ºèŽ·å–çŸ¥è¯†åº“é€»è¾‘
func NewGetKnowledgeBaseLogic(ctx context.Context, svcCtx *svc.ServiceContext) *GetKnowledgeBaseLogic {
	return &GetKnowledgeBaseLogic{
		ctx:    ctx,
		svcCtx: svcCtx,
		Logger: logx.WithContext(ctx),
	}
}

// GetKnowledgeBase èŽ·å–çŸ¥è¯†åº“è¯¦æƒ…
// æ¼”ç¤ºï¼šå¦‚ä½•åœ¨ gRPC æœåŠ¡ä¸­ä½¿ç”¨ DDD çš„ Query Handler
// æµç¨‹ï¼šgRPC Request -> Logic -> Query Handler -> Repository -> Domain Entity -> DTO -> gRPC Response
func (l *GetKnowledgeBaseLogic) GetKnowledgeBase(req *pb.GetKnowledgeBaseRequest) (*pb.GetKnowledgeBaseResponse, error) {
	l.Logger.Infof("ðŸ“¥ [gRPC] GetKnowledgeBase è¯·æ±‚: id=%s, includeDocuments=%v", req.Id, req.IncludeDocuments)

	// æž„å»ºæŸ¥è¯¢å¯¹è±¡ï¼ˆCQRS æ¨¡å¼ä¸­çš„ Queryï¼‰
	qry := &query.GetKnowledgeBaseQuery{
		ID:               req.Id,
		IncludeDocuments: req.IncludeDocuments,
	}

	// é€šè¿‡åº”ç”¨å±‚å®¹å™¨è®¿é—®æŸ¥è¯¢å¤„ç†å™¨
	// Query Handler è´Ÿè´£ï¼š
	// - éªŒè¯å‚æ•°æ ¼å¼
	// - é€šè¿‡ä»“å‚¨èŽ·å–é¢†åŸŸå®žä½“
	// - å°†é¢†åŸŸå®žä½“è½¬æ¢ä¸º DTO
	result, err := l.svcCtx.App.Queries.GetKnowledgeBase.Handle(l.ctx, qry)
	if err != nil {
		l.Logger.Errorf("âŒ èŽ·å–çŸ¥è¯†åº“å¤±è´¥: %v", err)
		// ä½¿ç”¨ç»Ÿä¸€çš„é”™è¯¯è½¬æ¢å‡½æ•°
		return nil, interfaces.ToGrpcError(err)
	}

	// å°† DTO è½¬æ¢ä¸º gRPC å“åº”
	// æ³¨æ„ï¼šè¿™é‡Œè¿›è¡Œäº† DTO -> Protobuf çš„è½¬æ¢
	// è¿™ç§è½¬æ¢ä¿æŒäº†å„å±‚ä¹‹é—´çš„è§£è€¦
	resp := &pb.GetKnowledgeBaseResponse{
		KnowledgeBase: convertToProtoKnowledgeBase(result),
	}

	l.Logger.Infof("âœ… [gRPC] GetKnowledgeBase æˆåŠŸ: name=%s", result.Name)
	return resp, nil
}

// convertToProtoKnowledgeBase å°† DTO è½¬æ¢ä¸º Protobuf æ¶ˆæ¯
// è¿™ä¸ªè½¬æ¢å‡½æ•°æ”¾åœ¨æŽ¥å£å±‚ï¼Œå› ä¸ºå®ƒæ˜¯æŽ¥å£å±‚ç‰¹æœ‰çš„è½¬æ¢é€»è¾‘
func convertToProtoKnowledgeBase(d *dto.KnowledgeBaseDTO) *pb.KnowledgeBase {
	kb := &pb.KnowledgeBase{
		Id:            d.ID,
		Name:          d.Name,
		Description:   d.Description,
		DocumentCount: int32(d.DocumentCount),
		CreatedAt:     d.CreatedAt.Unix(),
		UpdatedAt:     d.UpdatedAt.Unix(),
	}

	// è½¬æ¢æ–‡æ¡£åˆ—è¡¨
	if len(d.Documents) > 0 {
		kb.Documents = make([]*pb.Document, len(d.Documents))
		for i, doc := range d.Documents {
			kb.Documents[i] = &pb.Document{
				Id:              doc.ID,
				KnowledgeBaseId: doc.KnowledgeBaseID,
				Title:           doc.Title,
				Content:         doc.Content,
				Tags:            doc.Tags,
				CreatedAt:       doc.CreatedAt.Unix(),
				UpdatedAt:       doc.UpdatedAt.Unix(),
			}
		}
	}

	return kb
}
